processes to quit one-by-one, which takes some time for each
process as it disentangles its shared memory.  We now
wait for all the processes together, so they can disentangle
in parallel.  It can still take up to a minute in some cases,
but not 10 minutes like it was taking before the fix.

Enabled ambient cache value corral for all levels, not just final two.
This may reduce errors in certain pathological scenes.

Added -in option to rcalc, rlam, and total to limit the number of
input records in hopes of circumventing Windows EOF issues on binary data.
Also added -on option to rcalc and total for logical symmetry.

Increased modifier limit to 10,000 in rcontrib.

Fixed issues with glrad and added zoom response to mouse wheel input.

Added missing definition of "ashik2" material type to reference manual.

Changed genBSDF to calculate device thickness assuming Zmax==0 so
pkgBSDF will generate correct proxy geometry.

Created pabopto2xyz tool to combine different sensor measurements
into a single CIE-XYZ measurement file for color BSDF interpolation.

Jan Wienold updated evalglare to version 1.30

Roland Schregle added out-of-core photon mapping routines, which
may be compiled using the PMAP_OOC macro.

Added -a option to getinfo for easy addition of header lines.

Fixed issue with multiple records on picture output in rcontrib (and rfluxmtx).
Credit to Sarith Subramaniam for pointing out the problem.

Made mkillum more tolerant of non-planar polygons in its sampling routines.

Added "-recover" option to genBSDF to pick up where it left off.

Fixed genBSDF issue that was created incorrect normalization of
Klems output.  Thanks to David G-M and Christian Knoflach for
discovering the error.  Also improved sampling of indirect irradiance
that showed some slight bias due to poor sample collision avoidance.

Fixed long-standing issue with -aa 0 neglecting textures in calculating
surface shading.

Fixed bug in ranimove introduced during photon map integration.